--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     
+   <h2>Enter Your task</h2>
+   <div>
+         <input type="text"  id="textValue" placeholder="Enter Your task here">
+         <button id="addButton" >Add</button>
+         <ul id="showTask" ></ul>
+      
+   </div>
+  
 
     <script src="./app.js"></script>
 </body>
